<resources>
    <string name="app_name">LabRemote</string>
    <string name="console_placeholder">Pilot[IR]:\n</string>

    <string name="Acer">Acer</string>
    <string name="Dell">Dell</string>
    <string name="Infocus">Infocus</string>
    <string name="Sanyo">Sanyo</string>
    <string name="Sony">Sony</string>

    <string name="input">Input</string>
    <string name="freeze">Freeze</string>
    <string name="zoom">Zoom</string>
    <string name="blank">Blank</string>
    <string name="noshow">No show</string>

    <string name="ok">Ok</string>
    <string name="right">▶</string>
    <string name="left">◀</string>
    <string name="down">▼</string>
    <string name="up">▲</string>

    <string name="menu">Menu</string>
    <string name="back">Powrót</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <string-array name="multi_select_list_preference_default_value" />
    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>
    <string-array name="pref_upload_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="settings">Ustawienia</string>



    <string name="app_version">1.0</string>
    <string name="title_version">Version</string>
    <string name="login_title">Twój login</string>
    <string name="login">login</string>
    <string name="title_activity_settings2">Ustawienia</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="zaimportuj">Importuj</string>
    <string name="large_text">

        "Aplikacja LabRemote powstała w ramach pracy dyplomowej. Przeznaczona jest dla pracowników"
        "Wydziału Matematyki i Informatyki UMK, posiadających telefon wyposażony w port"
        "podczerwieni oraz system Android w wersji min. 4.0. Celem aplikacji jest ułatwienie"
        "pracownikom korzystanie z rzutników multimedialnych w salach laboratoryjnych i ćwiczeniowych.\n"
    </string>
    <string name="ścieżka">Wybierz plik .csv z planem</string>
    <string name="ścieżka2">Wybierz plik .csv z danymi pracowników</string>
    <string name="login_tytul">Podaj swój login</string>
    <string name="salespinner">Ręczny wybór sali</string>
    <string name="version">Version</string>
    <string name="about">O Aplikacji</string>
    <string name="sciezka2TV" />
    <string name="sciezkaTV" />


</resources>
